--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-Pillow
-tensorflow
-plotly
+streamlit==1.33.0
+pandas==1.5.3
+numpy==1.21.6
+matplotlib==3.5.3
+seaborn==0.12.2
+Pillow==9.5.0
+tensorflow==2.10.1
+plotly==5.15.0
