--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 streamlit==1.33.0
-pandas==1.5.3
-numpy==1.21.6
-matplotlib==3.5.3
+pandas==2.2.2
+numpy==1.24.3
+matplotlib==3.7.3
 seaborn==0.12.2
 Pillow==9.5.0
-tensorflow==2.10.1
+tensorflow==2.13.0
+keras==2.13.1
+protobuf==4.23.3
+tensorboard==2.13.0
+tensorflow-estimator==2.13.0
 plotly==5.15.0
